test/sema/type-doesnt-implement-interface.delta
// RUN: not %delta -typecheck %s | %FileCheck %s

interface X {
    func foo();
    func bar();
    func qux();
}

class Y {
    init() {}
    func foo() {}
}

func f<T: X>(t: T) {}

func main() {
    // CHECK: [[@LINE+1]]:6: error: type 'Y' doesn't implement interface 'X' because it doesn't have member function 'bar'
    f(Y());
}
